tests/baselines/reference/duplicateNumericIndexers.errors.txt
==== tests/cases/conformance/types/members/duplicateNumericIndexers.ts (8 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    interface Number {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface String {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface Array<T> {
        [x: number]: T;
        ~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
        [x: number]: T;
        ~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    class C {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface I {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    var a: {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    